--- a/archive/400-1800baseline+noise_removal_parameter_tuning.ipynb
+++ b/archive/400-1800baseline+noise_removal_parameter_tuning.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
        "[8023575 rows x 6 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
        "[6239205 rows x 6 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -700,7 +700,7 @@
        "[5 rows x 2050 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -972,7 +972,7 @@
        "[6239205 rows x 7 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -983,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -992,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1023,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1070,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1261,7 +1261,7 @@
        "[6239205 rows x 8 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1272,7 +1272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1281,7 +1281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1305,7 +1305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1327,7 +1327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1336,7 +1336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1367,7 +1367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1398,7 +1398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1601,7 +1601,7 @@
        "[2049 rows x 9 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1613,7 +1613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1634,7 +1634,7 @@
        "<Axes: xlabel='WaveNumber', ylabel='Absorbance'>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1666,7 +1666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1687,7 +1687,7 @@
        "<Axes: xlabel='WaveNumber', ylabel='Baseline_Corrected_Absorbance'>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1716,7 +1716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1750,7 +1750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1776,7 +1776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1784,45 +1784,32 @@
      "output_type": "stream",
      "text": [
       "              SpecID   Seq  WaveNumber  Absorbance     SurID         Status  \\\n",
-      "7981415  210526-3-04     0   200.00000   3094.2837  210526-3  Hyperglycemia   \n",
-      "7981416  210526-3-04     1   200.68336   3109.5640  210526-3  Hyperglycemia   \n",
-      "7981417  210526-3-04     2   201.36674   3041.8801  210526-3  Hyperglycemia   \n",
-      "7981418  210526-3-04     3   202.05011   3033.1189  210526-3  Hyperglycemia   \n",
-      "7981419  210526-3-04     4   202.73349   3061.7734  210526-3  Hyperglycemia   \n",
+      "7981708  210526-3-04   293   400.22778   2418.5078  210526-3  Hyperglycemia   \n",
+      "7981709  210526-3-04   294   400.91116   2425.2903  210526-3  Hyperglycemia   \n",
+      "7981710  210526-3-04   295   401.59454   2440.9182  210526-3  Hyperglycemia   \n",
+      "7981711  210526-3-04   296   402.27789   2452.6968  210526-3  Hyperglycemia   \n",
+      "7981712  210526-3-04   297   402.96127   2452.4475  210526-3  Hyperglycemia   \n",
       "...              ...   ...         ...         ...       ...            ...   \n",
-      "7984045  210526-3-04  2630  1997.26650   1646.8857  210526-3  Hyperglycemia   \n",
-      "7984046  210526-3-04  2631  1997.94980   1655.2378  210526-3  Hyperglycemia   \n",
-      "7984047  210526-3-04  2632  1998.63330   1652.1541  210526-3  Hyperglycemia   \n",
-      "7984048  210526-3-04  2633  1999.31670   1644.7822  210526-3  Hyperglycemia   \n",
-      "7984049  210526-3-04  2634  2000.00000   1638.7900  210526-3  Hyperglycemia   \n",
+      "7983752  210526-3-04  2337  1797.03870   1994.6351  210526-3  Hyperglycemia   \n",
+      "7983753  210526-3-04  2338  1797.72200   2007.0331  210526-3  Hyperglycemia   \n",
+      "7983754  210526-3-04  2339  1798.40550   2007.3999  210526-3  Hyperglycemia   \n",
+      "7983755  210526-3-04  2340  1799.08890   1982.2590  210526-3  Hyperglycemia   \n",
+      "7983756  210526-3-04  2341  1799.77220   1974.7581  210526-3  Hyperglycemia   \n",
       "\n",
-      "         Despiked_Absorbance  Baseline_Corrected_Absorbance  \\\n",
-      "7981415            3094.2837                     218.441552   \n",
-      "7981416            3109.5640                     235.116498   \n",
-      "7981417            3041.8801                     168.827244   \n",
-      "7981418            3033.1189                     161.460689   \n",
-      "7981419            3061.7734                     191.509834   \n",
-      "...                      ...                            ...   \n",
-      "7984045            1646.8857                      45.666149   \n",
-      "7984046            1655.2378                      55.264870   \n",
-      "7984047            1652.1541                      53.427791   \n",
-      "7984048            1644.7822                      47.302512   \n",
-      "7984049            1638.7900                      42.556932   \n",
+      "         Scaled_Absorbance  Despiked_Absorbance  Scaled_Despiked_Absorbance  \n",
+      "7981708           0.793809            2418.5078                    0.793809  \n",
+      "7981709           0.796035            2425.2903                    0.796035  \n",
+      "7981710           0.801164            2440.9182                    0.801164  \n",
+      "7981711           0.805030            2452.6968                    0.805030  \n",
+      "7981712           0.804948            2452.4475                    0.804948  \n",
+      "...                    ...                  ...                         ...  \n",
+      "7983752           0.654684            1994.6351                    0.654684  \n",
+      "7983753           0.658753            2007.0331                    0.658753  \n",
+      "7983754           0.658874            2007.3999                    0.658874  \n",
+      "7983755           0.650622            1982.2590                    0.650622  \n",
+      "7983756           0.648160            1974.7581                    0.648160  \n",
       "\n",
-      "         Smoothed_Absorbance  Scaled_Absorbance  \n",
-      "7981415           220.106192           0.463977  \n",
-      "7981416           205.851018           0.433928  \n",
-      "7981417           195.465172           0.412035  \n",
-      "7981418           188.948654           0.398298  \n",
-      "7981419           186.301462           0.392718  \n",
-      "...                      ...                ...  \n",
-      "7984045            49.231070           0.103778  \n",
-      "7984046            50.359923           0.106157  \n",
-      "7984047            49.999946           0.105398  \n",
-      "7984048            48.151140           0.101501  \n",
-      "7984049            44.813504           0.094465  \n",
-      "\n",
-      "[2635 rows x 10 columns]\n"
+      "[2049 rows x 9 columns]\n"
      ]
     }
    ],
@@ -1840,9 +1827,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'Smoothed_Absorbance'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/core/indexes/base.py:3791\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3790\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m-> 3791\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   3792\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
+      "File \u001b[0;32mindex.pyx:152\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mindex.pyx:181\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7080\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7088\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'Smoothed_Absorbance'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[59], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#peaks, _ = find_peaks(x=sample['Absorbance'], distance=152, prominence=42, width=6)\u001b[39;00m\n\u001b[1;32m      3\u001b[0m raw_peaks, _ \u001b[38;5;241m=\u001b[39m find_peaks(x\u001b[38;5;241m=\u001b[39msample[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAbsorbance\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[0;32m----> 4\u001b[0m smooth_peaks, _ \u001b[38;5;241m=\u001b[39m find_peaks(x\u001b[38;5;241m=\u001b[39m\u001b[43msample\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mSmoothed_Absorbance\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m)\n\u001b[1;32m      5\u001b[0m baseline_peaks, _ \u001b[38;5;241m=\u001b[39m find_peaks(x\u001b[38;5;241m=\u001b[39msample[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mBaseline_Corrected_Absorbance\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[1;32m      6\u001b[0m despiked_peaks, _ \u001b[38;5;241m=\u001b[39m find_peaks(x\u001b[38;5;241m=\u001b[39msample[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDespiked_Absorbance\u001b[39m\u001b[38;5;124m'\u001b[39m])\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/core/frame.py:3893\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3891\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m   3892\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[0;32m-> 3893\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   3894\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[1;32m   3895\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/core/indexes/base.py:3798\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3793\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[1;32m   3794\u001b[0m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc\u001b[38;5;241m.\u001b[39mIterable)\n\u001b[1;32m   3795\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[1;32m   3796\u001b[0m     ):\n\u001b[1;32m   3797\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[0;32m-> 3798\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[1;32m   3799\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[1;32m   3800\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[1;32m   3801\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[1;32m   3802\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[1;32m   3803\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'Smoothed_Absorbance'"
+     ]
+    }
+   ],
    "source": [
     "#peaks, _ = find_peaks(x=sample['Absorbance'], distance=152, prominence=42, width=6)\n",
     "\n",
