Discovered that spectra from the same surface can leak information, so GroupKFold is needed

--- a/feature_engineering/baseline+noise_removal_parameter_tuning.ipynb
+++ b/feature_engineering/baseline+noise_removal_parameter_tuning.ipynb
@@ -752,8 +752,10 @@
    "outputs": [],
    "source": [
     "def evaluate_extra_trees(df):\n",
-    "    # Splitting the dataframe into features (X) and target variable (y)\n",
-    "    X = df.drop(['Status'], axis=1)\n",
+    "\n",
+    "    # Set the Surfaces as groups\n",
+    "    groups = df['SurID']\n",
+    "    X = df.drop(['Status', 'SurID'], axis=1)\n",
     "    y = df['Status']\n",
     "    \n",
     "    # Creating the Extra Trees classifier\n",
@@ -3616,7 +3618,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
