Created GroupKFold Parameter Search

--- a/feature_engineering/peak_parameter_tuning.ipynb
+++ b/feature_engineering/peak_parameter_tuning.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
        "[6239205 rows x 6 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +292,7 @@
        "<AxesSubplot: xlabel='WaveNumber', ylabel='Absorbance'>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
        "<AxesSubplot: xlabel='WaveNumber', ylabel='Absorbance'>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,20 +456,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\FX 8320\\AppData\\Local\\Temp\\ipykernel_1612\\2902688669.py:24: SettingWithCopyWarning: \n",
+      "C:\\Users\\FX 8320\\AppData\\Local\\Temp\\ipykernel_20408\\3839389258.py:22: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  peaks_df['PeakWidths'] = widths\n",
-      "C:\\Users\\FX 8320\\AppData\\Local\\Temp\\ipykernel_1612\\2902688669.py:25: SettingWithCopyWarning: \n",
+      "C:\\Users\\FX 8320\\AppData\\Local\\Temp\\ipykernel_20408\\3839389258.py:23: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -488,9 +488,7 @@
     "\n",
     "    #peak_index, _ = find_peaks(x=group['Absorbance'], distance=152, prominence=42, width=6)\n",
     "    peak_index, _ = find_peaks(x=group['Absorbance'])\n",
-    "    #peak_index, _ = find_peaks(x=group['Absorbance'], distance=None, prominence=None, width=None)\n",
     "\n",
-    "    #peak_index, _ = find_peaks(x=group['Absorbance'], prominence=75)\n",
     "\n",
     "    # Calculate the widths of each peak\n",
     "    widths += list(peak_widths(group['Absorbance'], peaks=peak_index, rel_height=0.5)[0])\n",
@@ -508,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -699,7 +697,7 @@
        "[511580 rows x 8 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -710,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -746,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -771,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -931,7 +929,7 @@
        "4           363.817836             0.001538  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -942,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -951,7 +949,7 @@
        "(3045, 14)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -962,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -973,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -982,7 +980,7 @@
        "(3045, 14)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -993,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1017,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1026,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1156,7 +1154,7 @@
        "[6239205 rows x 4 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1167,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1182,13 +1180,13 @@
     "# First Search\n",
     "distances = [None, 5, 10, 25, 50, 100, 150, 200, 250]\n",
     "prominences = [None, 5, 10, 25, 50, 100, 150, 200, 250]\n",
-    "widths = [None, 1, 2, 5, 10, 20]\n",
-    "thresholds = [None, 5, 10, 25, 50, 100, 150, 200, 250]"
+    "widths = [None, 0.5, 1, 2, 3, 4, 5, 8]\n",
+    "thresholds = [None, 5, 10, 25, 50]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1201,7 +1199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1232,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1297,14 +1295,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best Parameters: Distance=5.0, Prominence=nan, Width=nan, Thresholde=nan and Avg_Peak_Count=118.11 with Accuracy: 0.6391\n"
+      "Best Parameters: Distance=nan, Prominence=nan, Width=nan, Thresholde=nan and Avg_Peak_Count=168.01 with Accuracy: 0.6355\n"
      ]
     }
    ],
@@ -1344,7 +1342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1357,14 +1355,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\FX 8320\\AppData\\Local\\Temp\\ipykernel_1612\\3718610318.py:5: SettingWithCopyWarning: \n",
+      "C:\\Users\\FX 8320\\AppData\\Local\\Temp\\ipykernel_20408\\3718610318.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1383,7 +1381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1499,7 +1497,7 @@
        "31         1.255784  400-425  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1519,7 +1517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1541,7 +1539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1798,7 +1796,7 @@
        "[5 rows x 169 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1809,7 +1807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1833,7 +1831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1850,7 +1848,6 @@
     "\n",
     "    # Add a \"Bin\" column to the DataFrame\n",
     "    peaks_df['Bin'] = peaks_df['WaveNumber'].apply(lambda x: calculate_bin_interval(x, bin_size))\n",
-    "    peaks_df.head()\n",
     "    \n",
     "    # Pivot table with 'Absorbance', 'PeakWidths', and 'PeakProminences' as values\n",
     "    peak_bins = peaks_df.pivot_table(index='SpecID', columns='Bin', values=['Absorbance', 'PeakWidths', 'PeakProminences'], aggfunc='mean')\n",
@@ -1858,7 +1855,7 @@
     "    peak_bins.reset_index(inplace=True)\n",
     "\n",
     "    # Merge with 'Status' information\n",
-    "    peak_bins = pd.merge(peak_bins, statuses, on='SpecID')\n",
+    "    peak_bins = pd.merge(statuses, peak_bins, on='SpecID', how='left')\n",
     "\n",
     "    # Set 'SpecID' as the index\n",
     "    peak_bins.set_index('SpecID', inplace=True)\n",
@@ -1903,14 +1900,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best Parameters: Distance=nan, Prominence=nan, Width=nan, Thresholde=0.01 and Avg_Peak_Count=162.95 with Accuracy: 0.8434\n"
+      "Best Parameters: Distance=nan, Prominence=nan, Width=nan, Thresholde=nan and Avg_Peak_Count=168.01 with Accuracy: 0.8407\n"
      ]
     }
    ],
